JSA-24/10/2018 Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionAutorizacion.cshtml
@@ -7,7 +7,18 @@
     <title>RequisicionAutorizacion</title>
     <link rel="stylesheet" href="~/assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
     <link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
-    <script src="~/Scripts/js/RequisicionAutorizacionJS.js" ></script>
+    <script src="~/Scripts/js/RequisicionAutorizacionJS.js"></script>
+    <script type="text/javascript">
+        var Cancelar = function () {
+            var url = "/Requisicion/Cancelar";
+            var id = '@Model.IdRequisicion'
+            var motivo = $("#MotivoCancelacion").val()
+            $.get(url, { IdRequisicion: id, MotivoCancela: motivo }, function (data) {
+
+                window.location.href = '@Url.Action("Requisiciones", "Requisicion")';
+            });
+        };
+    </script>
 </head>
 <body>
     @using (Html.BeginForm("Autorizacion", "Requisicion", FormMethod.Post))
@@ -26,7 +37,7 @@
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Requisición</h2>
                             <ul class="breadcrumb padding-0">
-                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item active">
                                     <label id="lblRuta">Requisición / Autorización </label>
                                 </li>
@@ -42,43 +53,40 @@
                                     <div class="row clearfix">
                                         <div class="col-sm-4">
                                             <div class="form-group">
-                                                <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" disabled data-live-search="true">
-                                                    @foreach (var lst in ViewBag.Empresas)
-                                                    {
-                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
-                                                    }
-                                                </select>
+                                                <strong>Gasera: </strong>
+                                                @foreach (var item in @ViewBag.Empresas)
+                                                {
+                                                    @item.NombreComercial
+                                                }
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-group">
                                                 <div class="input-group">
-                                                    <label>Número de Requisición:</label>&nbsp;
-                                                    <Label>@Model.NumeroRequisicion</Label>
+                                                    <strong>Número de Requisición: </strong>@Model.NumeroRequisicion
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row clearfix z-index" id="divCamposRequi">
+                                    <div class="row clearfix" id="divCamposRequi">
                                         <div class="col-lg-3">
                                             <b>Fecha requerida:</b>
-                                            <input type="text" value="@Model.FechaRequerida" class="form-control" disabled />
+                                            <div>
+                                                @Model.FechaRequerida
+                                            </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <b>Solicitante:</b>
-                                            <select id="ddlSoliciante" name="IdUsuarioSolicitante" class="form-control show-tick" disabled data-live-search="true">
-                                                @foreach (var lst in ViewBag.Usuarios)
-                                                {
-                                                    <option value="@lst.IdUsuario">@lst.Nombre @lst.Apellido1</option>
-                                                }
-                                            </select>
+                                            <div>
+                                                @ViewBag.Usuarios.Nombre @ViewBag.Usuarios.Apellido1
+                                            </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="form-group form-float">
                                                 <b>Motivo de compra:</b>
                                                 @Html.TextAreaFor(m => m.MotivoRequisicion, new { @class = "form-control no-resize btn-round", @disabled = "disabled", @placeholder = "Motivo de la compra...", @rows = "4" })
                                             </div>
-                                            </div>
+                                        </div>
                                         <div class="col-lg-3">
                                             <div class="form-group form-float">
                                                 <b>Se requiere en:</b>
@@ -103,7 +111,7 @@
                                     }
                                     <div class="row clearfix">
                                         <div class="col-lg-12">
-                                            <h2 class="card-inside-title">Opinión de Almacen</h2>
+                                            <strong>Opinión de Almacen</strong>
                                             <div class="row clearfix">
                                                 <div class="col-sm-12">
                                                     <div class="form-group">
@@ -146,7 +154,7 @@
                                             </a>
                                         </div>
                                         <div class="col-lg-4 col-md-8 text-center">
-                                            <a href="#ModalCancelar" data-toggle="modal" id="btnCancel" data-target="#ModalCancelar" class="btn btn-raised btn-primary btn-round disabled">
+                                            <a href="#ModalCancelar" data-toggle="modal" id="btnCancel" data-target="#ModalCancelar" class="btn btn-raised btn-primary btn-round">
                                                 Cancelar
                                             </a>
                                         </div>
@@ -167,17 +175,23 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="title" id="ModalCancelarLabel">Motivo de cancelcion</h4>
+                        <strong>Motivo de cancelción</strong>
                     </div>
                     <div class="modal-body">
                         <div class="body">
-                            <div class="col-sm-12">
-                                <textarea name="MotivoCancela" class="form-control" Rows="5" placeholder="Cual es el motivo de la cancelacion..."></textarea>
+                            <div class="body">
+                                <div class="col-sm-12 blockquote blockquote-info btn-round">
+                                    <div class="form-group">
+                                        <div class="form-line">
+                                            @Html.TextAreaFor(m => m.MotivoCancelacion, new { @class = "form-control no-resize", @Rows = 4 })
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <input type="submit" class="btn btn-raised btn-primary btn-round" value="Cancelar" formaction="Cancelar" />
+                        <button type="button" id="btnCancelar" class="btn btn-raised btn-primary btn-round" onclick="Cancelar()">Cancelar</button> 
                         <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Regresar</button>
                     </div>
                 </div>
