--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
@@ -38,10 +38,12 @@
                             </ul>
                         </div>
                     </div>
+                    <br />
                     <div class="card">
-                        <div class="row clearfix">
-                            <div class="col-sm-4">
-                                <div class="form-group">
+                        <div class="body">
+                            <div class="row clearfix">
+                                <div class="col-sm-4">
+                                    <strong>Gasera: </strong>
                                     <select name="IdEmpresa" class="form-control show-tick selectpicker" @EnabledAdminCentral data-live-search="true">
                                         @foreach (var lst in ViewBag.Empresas)
                                         {
@@ -49,17 +51,16 @@
                                         }
                                     </select>
                                 </div>
-                            </div>
-                            <div class="col-sm-4" >
-                                <div class="form-group">
-                                    <input name="NumRequisicion" class="form-control" placeholder="N° de Requisición" />
+                                <div class="col-sm-4">
+                                    <div class="form-group">
+                                        <strong>Buscar:</strong>
+                                        <input name="NumRequisicion" class="form-control" placeholder="N° de Requisición" />
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="body">
-                            <div class="row clearfix">
+                            <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
+                                    <table class="table table-hover">
                                         <thead>
                                             <tr>
                                                 <td><b>Gasera</b></td>
@@ -105,6 +106,7 @@
                     <div class="card">
                         <div class="body">
                             <div class="row clearfix">
+
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <input name="NumeroRequisicion" class="form-control" placeholder="N° de Requisición" />
@@ -182,9 +184,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row clearfix">
+                            <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    <table class="table table table-bordered table-striped table-hover js-basic-example dataTable">
+                                    <table class="table table-hover">
                                         <thead>
                                             <tr>
                                                 <td><strong>Gasera</strong></td>
@@ -241,7 +243,7 @@
                                                                 <span class="icon-name"></span>
                                                             </a>
                                                         }
-                                                        @if ((_oc.EsGas == true || _oc.EsTransporteGas == true ) && _oc.IdOrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.EnComplementoCompra))
+                                                        @if ((_oc.EsGas == true || _oc.EsTransporteGas == true) && _oc.IdOrdenCompraEstatus.Equals(OrdenCompraEstatusEnum.EnComplementoCompra))
                                                         {
                                                             <a ID="lbVisualizarOC" href="@Url.Action("OrdenCompraComplementoGas", "OrdenCompra", new { id = _oc.IdOrdenCompra })">
                                                                 <i class="material-icons">local_gas_station</i>
