--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/Requisiciones.cshtml
@@ -34,7 +34,7 @@
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Requisición</h2>
                             <ul class="breadcrumb padding-0">
-                                <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item active">
                                     <label id="lblRuta">Requisiciones</label>
                                 </li>
@@ -93,7 +93,7 @@
                                                             <span class="input-group-addon">
                                                                 <i class="zmdi zmdi-calendar"></i>
                                                             </span>
-                                                            @Html.TextBoxFor(model => model.FechaCreacionDe, new { @class = "form-control date", @placeholder = "De:" })
+                                                            @Html.TextBoxFor(model => model.FechaCreacionDe, new { @class = "form-control date", @disabled = "disabled", @placeholder = "De:" })
                                                         </div>
                                                         @Html.ValidationMessageFor(model => model.FechaCreacionDe, "", new { @class = "text-danger" })
                                                     </div>
@@ -107,12 +107,11 @@
                                                             <span class="input-group-addon">
                                                                 <i class="zmdi zmdi-calendar"></i>
                                                             </span>
-                                                            @Html.TextBoxFor(model => model.FechaCreacionA, new { @class = "form-control date", @placeholder = "A:" })
+                                                            @Html.TextBoxFor(model => model.FechaCreacionA, new { @class = "form-control date", @disabled = "disabled", @placeholder = "A:" })
                                                         </div>
                                                         @Html.ValidationMessageFor(model => model.FechaCreacionA, "", new { @class = "text-danger" })
                                                     </div>
                                                 </div>
-
                                             </div>
                                             <div class="col-lg-2">
                                                 <label>Fecha de requisición</label>
@@ -122,7 +121,7 @@
                                                             <span class="input-group-addon">
                                                                 <i class="zmdi zmdi-calendar"></i>
                                                             </span>
-                                                            @Html.TextBoxFor(model => model.FechaRequeridaDe, new { @class = "form-control date", @placeholder = "De:" })
+                                                            @Html.TextBoxFor(model => model.FechaRequeridaDe, new { @class = "form-control date", @disabled = "disabled", @placeholder = "De:" })
                                                         </div>
                                                         @Html.ValidationMessageFor(model => model.FechaRequeridaDe, "", new { @class = "text-danger" })
                                                     </div>
@@ -138,7 +137,7 @@
                                                                 <i class="zmdi zmdi-calendar"></i>
                                                             </span>
 
-                                                            @Html.TextBoxFor(model => model.FechaRequeridaA, new { @class = "form-control", @placeholder = "A:" })
+                                                            @Html.TextBoxFor(model => model.FechaRequeridaA, new { @class = "form-control", @disabled = "disabled", @placeholder = "A:" })
                                                         </div>
                                                         @Html.ValidationMessageFor(model => model.FechaRequeridaA, "", new { @class = "text-danger" })
                                                     </div>
