JSA-15/10/2018-Avance Ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -113,7 +113,7 @@
                             }
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
-                                    <table class="table table-bordered">
+                                    <table class="table table-hover">
                                         <thead>
                                             <tr>
                                                 <td><b>Tipo</b></td>
@@ -122,15 +122,15 @@
                                                 <td><b>Unidad</b></td>
                                                 <td><b>Aplicación</b></td>
                                                 <td><b>Centro de costo</b></td>
-                                                <td><b>Proveedor</b></td>
-                                                <td><b>Cuenta Contable</b></td>
+                                                <td style="width:500px !important"><b>Proveedor&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></td>
+                                                <td><strong>Cuenta Contable&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></td>
 
                                                 @if (!Model.EsGasTransporte)
                                                 {
                                                     <td><b>Precio</b></td>
                                                     <td><b>%Desc</b></td>
-                                                    <td><b>%IVA</b></td>
-                                                    <td><b>%IEPS</b></td>
+                                                    <td><b>%IVA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></td>
+                                                    <td><b>%IEPS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></td>
                                                     <td><b>Importe</b></td>
                                                 }
                                             </tr>
