JOTM-25/10/2018-Servicios de corte y anticipos
* Api de Corte y anticipos
* Apis para punto de venta (tiene un return null)
* Detalles app

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,7 @@
                         android:hint="@string/login_hint_username"
                         android:inputType="text"
                         android:paddingBottom="5dp"
+                        android:text="op"
                         android:textSize="18sp"
                         tools:ignore="Autofill" />
                     <!--android:textColor="@color/colorTextLogin"
