--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/OrdenCompra.cshtml
@@ -1,22 +1,15 @@
 ﻿@model MVC.Presentacion.Models.OrdenCompra.OrdenCompraModel
+@Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView }
+    )
+@Html.DevExpress().GetScripts(
+        new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new Script { ExtensionSuite = ExtensionSuite.Editors },
+        new Script { ExtensionSuite = ExtensionSuite.GridView }
+    )
 
-<script type="text/javascript">
-    MVCxClientGlobalEvents.AddControlsInitializedEventHandler(AttachEditorValueChangedEvent);
-
-    function AttachEditorValueChangedEvent() {
-        var demoOptionNames = ["EditMode", "StartEditAction", "HighlightDeletedRows"];
-        $.each(demoOptionNames, function (i, name) {
-            var editor = ASPxClientControl.GetControlCollection().GetByName(name);
-            editor.ValueChanged.AddHandler(OnChangeDemoOptions);
-        });
-    }
-    function OnChangeDemoOptions() {
-        gridView.PerformCallback();
-    }
-    function OnBeginGridCallback(s, e) {
-        e.customArgs = MVCxClientUtils.GetSerializedEditorValuesInContainer("options");
-    }
-</script>
 <!DOCTYPE html>
 
 <html>
@@ -130,10 +123,11 @@
                                 </div>
                             }
                             <div class="row clearfix blockquote blockquote-info btn-round">
-                                @Html.Action("ProductoOCPartial", new { id = Model. })
+                                <div class="table-responsive">
+                                    @Html.Action("ProductoOCPartial", new { id = Model.IdOrdenCompra })
+                                </div>z
                             </div>
-
-                            <div class="row clearfix">
+                             <div class="row clearfix">
                                 <div class="col-sm-4 center">
                                     <asp:Button ID="btnRegresar" CssClass="btn btn-raised btn-primary btn-round" Text="Regresar" OnClick="btnRegresar_Click" />
                                 </div>
@@ -210,5 +204,5 @@
     }
 </body>
 @*@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
-@Scripts.Render("~/Scripts/jquery-ui.js")*@
+    @Scripts.Render("~/Scripts/jquery-ui.js")*@
 </html>
